strava: various padding/alignment fixes and other small tweaks

--- a/resources/scss/strava.scss
+++ b/resources/scss/strava.scss
@@ -56,7 +56,7 @@
     box-shadow: 3px 3px 15px 10px inset rgba(252, 76, 2, 0.1);
     
     max-height: 100vh;
-    transition: all 0.5s ease;
+    transition: all 0.8s ease;
     overflow: hidden;
 
     &.stats-minimized {
@@ -64,7 +64,7 @@
       padding: 0;
       margin: 0;
       border: 0;
-      transition: all 0.5s ease;
+      transition: all 0.8s ease;
     }
 
     > .strava-stats-legend {
@@ -83,7 +83,7 @@
 
   .strava-activities {
 
-    margin: calc(1.0 * var(--space));
+    margin-top: calc(1.0 * var(--space));
     margin-bottom: 0;
     height: calc(2rem + var(--activity-details-height));
 
@@ -103,7 +103,6 @@
 
         .strava-activity-top-bg {
           position: absolute;
-          // background: rgba(252, 76, 2, 0.4);
           background: linear-gradient(0deg,
                                       rgba(252, 76, 2, 0.0),
                                       rgba(52, 76, 2, 0.25) 25%,
@@ -115,7 +114,7 @@
 
         .strava-activity-full {
           position: relative;
-          padding: var(--space);
+          padding: 0; // no padding on sides, individual tabs can have as needed.
           padding-top: var(--space-lg);
           padding-bottom: 0; // actually want inner div padding gone but it's there despite being 0???
           overflow: hidden;
@@ -124,6 +123,8 @@
           .strava-activity-full-inner {
             overflow: scroll;
             height: var(--activity-details-height);
+            
+            padding: calc(1.0 * var(--space));
           }
 
           .strava-activity-stats {
@@ -155,6 +156,10 @@
             padding: 0.2em 0.3em;
             border: var(--line-width-sm) solid rgba(252, 76, 2, 0.5);
             
+          }
+
+          h3 {
+            padding-left: var(--space);
           }
 
           .strava-activity-graphs {
@@ -274,6 +279,11 @@
     padding: 0.5em;
     // height: 2em;
     // width: 2em;
+    &.strava-activity-dot {
+      span {
+        color: var(--bg-1);
+      }
+    }
   }
   .strava-activity-split-legend {
     position: absolute;
